Formulario de contacto

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <!-- Formulario -->
-      <form class="formulario-tarjeta">
+      <form action="" id="formulario-tarjeta" class="formulario-tarjeta">
         <div class="grupo">
           <label for="inputNumero">Nombre *</label>
           <input
