--- a/index.html
+++ b/index.html
@@ -16,32 +16,31 @@
       <!-- Tarjeta -->
       <section class="tarjeta" id="tarjeta">
         <div class="delantera">
-          <div
+          <div 
             class="logo-marca"
             id="logo-marca"
-            style="margin-top: 44px; text-align: center;"
           >
             <div class="grupo">
               <i
                 class="fas fa-toggle-on"
-                style="font-size: 40px; color: white;"
+                style="font-size: 30px; color: white;"
               ></i>
             </div>
             <div class="grupo">
-              <p class="nombre" style="font-size: 30px;">Freelance</p>
+              <p class="nombre"><strong>Freelance</strong></p>
             </div>
           </div>
-          <div class="datos">
+          <div class="datos mt-mob-4">
             <div class="grupo" id="numero">
               <p class="numero">David Ni&ntilde;o Herr&aacute;n</p>
             </div>
             <div class="flexbox" style="padding-bottom: 20px;">
               <div class="grupo" id="nombre">
-                <p class="nombre">FullStack JS Developer</p>
+                <p class="numero">FullStack JS Developer</p>
               </div>
 
               <div class="grupo" id="expiracion">
-                <p class="expiracion"><a href="https://api.whatsapp.com/send?phone=573132597900" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i> 313 2597900</a></p>
+                <p class="expiracion"><a href="https://api.whatsapp.com/send?phone=573132597900" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i>313&nbsp;2597900</a></p>
               </div>
             </div>
           </div>
